resources/templates/style.css
p.clear {
    clear: both;
    padding: 3px;
}

body {
  font-family: arial, verdana;
}

h3 {
  margin-bottom: 3px;
}

h4 {
  margin-top: 10px;
  margin-bottom: 3px;
}

.systems h4 {
  margin-bottom: 10px;
}

.library, .interface, .base {
  float: left;
  margin-left: 8px;
  margin-right: 8px;
  margin-bottom: 4px;
  padding-left: 30px;
  padding-right: 30px;
  padding-top: 10px;
  padding-bottom: 10px;
  border: 2px solid;
  text-align: center;
  cursor: pointer;
}

.library {
  border-color: #BBBBBB;
  background-color: #DDDDDD;
  margin-top: 4px;
  padding-top: 10px;
  padding-bottom: 10px;
}

.interface {
  border-color: #D2E4C6;
  background-color: #E7FBDA;
  margin-top: 4px;
  padding-top: 10px;
  padding-bottom: 10px;
}

.component {
  float: left;
  overflow: auto;
  border: 2px solid;
  text-align: center;
  margin-left: 8px;
  margin-right: 8px;
  margin-top: 6px;
  margin-bottom: 6px;
  border-color: #9AD6CC;
  background-color: #D1F0EB;
}

.component-impl {
  display: block;
  padding-top: 10px;
  padding-bottom: 6px;
  margin-left: 30px;
  margin-right: 30px;
  text-align: center;
  border-color: #9AD6CC;
  background-color: #D1F0EB;
  cursor: pointer;
  width: max-content;
}

.pass-through-ifc {
  display: inline-block;
  margin-top: 4px;
  padding-left: 25px;
  padding-right: 25px;
  padding-top: 1px;
  padding-bottom: 2px;
  text-align: center;
  display: block;
  border-color: #D2E4C6;
  background-color: #E7FBDA;
  cursor: pointer;
}

.pass-through-ifc-empty {
  display: inline-block;
  margin-top: 4px;
  padding-left: 25px;
  padding-right: 25px;
  padding-top: 1px;
  padding-bottom: 2px;
  text-align: center;
  display: block;
  border-color: #D2E4C6;
  background-color: #E7FBDA;
  cursor: pointer;
}

.base {
  border-color: #B1D1E6;
  background-color: #D6E8F6;
  margin-top: 5px;
  padding-top: 20px;
  padding-bottom: 20px;
}

.environments {
    margin-left: 5px;
}

.systems {
    margin-left: 5px;
}

.deps-table {
  text-align: left;
  empty-cells: hide; 
  border-spacing: 0px;
  margin-left: 8px;
  margin-bottom: 15px;
}

.deps-table td {
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
  border: 2px solid;
  text-align: center;
  cursor: pointer;
}

td.spc {
  padding: 1px;
  background-color: #D6E8F6;
  border-color: #B1D1E6;
}

td.tbase {
  background-color: #D6E8F6;
  border-color: #B1D1E6;
}

td.tcomponent {
  border-color: #9AD6CC;
  background-color: #D1F0EB;
  border-bottom-width: 0px;
}


.table a {
    display:block;
    text-decoration:none;
}

